--- a/src/main/resources/static/CitySafe.html
+++ b/src/main/resources/static/CitySafe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  ng-app="AmISafeHere">
 
 <head>
 
@@ -34,9 +34,10 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"  ng-controller="CityCtrl">
 
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -88,7 +89,8 @@
                     <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2">
                         <h4 class="brand-heading">Let's find out! </h4>
                         <button class="btn-success btn-lg btn-block"
-                                data-toggle="modal" data-target="#resultModal">
+                                data-toggle="modal" data-target="#resultModal"
+                                ng-click="SearchCityWithCoordinates()">
                             <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
                             Get My Location
                         </button>
@@ -100,11 +102,12 @@
                         <div class="row">
                             <div class="col col-lg-10 col-md-10 col-sm-10 col-xs-10">
                                 <input id="citySearch" type="text" class="form-control" autocomplete="off"
-                                       placeholder="Find my City" aria-describedby="basic-addon1">
+                                       placeholder="Find my City" aria-describedby="basic-addon1"
+                                       ng-model="cityAddressToSearch">
                             </div>
                             <div class="col col-lg-2 col-md-2 col-sm-2 col-xs-2">
                                 <button type="submit" class="btn btn-default"
-                                        data-toggle="modal" data-target="#resultModal">
+                                        data-toggle="modal" data-target="#resultModal" ng-click="SearchCityWithAddress()">
                                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                                     Find
                                 </button>
@@ -116,7 +119,7 @@
         </div>
     </header>
 
-    <div id="demo" style="display:block" ></div>
+    <div id="addressIsHere" style="display:block" ></div>
 
     <!-- Modal -->
     <div class="modal fade" id="resultModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -210,7 +213,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD90S0xFhWOVrI1BsM72yAognJ7tQy-_xM"></script>
 
     <!-- Theme JavaScript -->
     <script type="text/javascript"  src="./js/grayscale.js"></script>
@@ -221,6 +224,9 @@
     <!-- Crime Logic JavaScript -->
     <script type="text/javascript"  src="./js/CrimeLogic.js"></script>
 
+    <!-- Angular JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+    <script src="/js/AmISafeHere-ajs.js"></script>
 </body>
 
 </html>
