--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
     <title>SoundsNeat - Is This City Safe?</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="./img/SoundsNeat.png"/>
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
