--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="main page for Is this city safe project">
+    <meta name="description" content="main page for Am I Safe Here? project">
     <meta name="author" content="william">
 
-    <title>SoundsNeat - Is This City Safe?</title>
+    <title>Am I safe here? - SoundsNeat</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
@@ -47,7 +47,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> Is this <span class="light">City</span>  Safe?
+                    <i class="fa fa-play-circle"></i> Am I <span class="light">Safe</span>  Here?
                 </a>
             </div>
 
@@ -80,8 +80,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2">
-                        <h3 class="brand-heading">Is this city safe? </h3>
-                        <p class="intro-text">Have you ever explored to an unknown city, and wonder "Is it safe?"
+                        <h3 class="brand-heading">Am I safe here? </h3>
+                        <p class="intro-text">Have you ever been in a new city and wondered "Am I safe here?"
                             </p>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Sounds Neat</h2>
                 <p>
-                    We will write some info about our team or about our service. :)
+                    We'll write some info about our team soon. :)
                 </p>
             </div>
         </div>
@@ -186,15 +186,13 @@
     <!-- Download Section -->
     <section id="sourcecode" class="content-section text-center">
         <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Source Code</h2>
-                    <p>You can download our source code for free on the github.</p>
-                    <a href="https://github.com/orgs/SoundsNeat/dashboard"
-                       class="btn btn-default btn-lg">
-                        Visit Github Page [TODO: update the sourcecode page]
-                    </a>
-                </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Download Source Code</h2>
+                <p>You can download our source code for free on the github.</p>
+                <a href="https://github.com/SoundsNeat/demo-web-project"
+                   class="btn btn-default btn-lg">
+                    Visit Github Page [TODO: update the sourcecode page]
+                </a>
             </div>
         </div>
     </section>
@@ -203,8 +201,8 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our project, give us suggestions for new ideas, or to just say hello!</p>
+                <h2>Contact</h2>
+                <p>Feel free to email us to provide feedback on our project, give us suggestions for new ideas, or to just say hello!</p>
                 <p><a href="mailto:soundsneat480@gmail.com">soundsneat480@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
@@ -228,7 +226,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Is this city safe 2016</p>
+            <p>Copyright &copy; Am I Safe Here? 2016</p>
         </div>
     </footer>
 
