--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="main page for Am I Safe Here? project">
     <meta name="author" content="william">
 
-    <title>Am I safe here? - SoundsNeat</title>
+    <title>Am I Safe Here? - SoundsNeat</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
