add stylings, update google coordinate script

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -132,35 +132,75 @@
                     <h4 class="modal-title" id="myModalLabel">Search Results</h4>
                 </div>
                 <div class="modal-body" id="resultModalBody">
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row" id="cityStateTitle" ng-model="result">
-                            <h3>{{result.city}}, {{result.state}}</h3>
-                            <div class="col" id="displayResult">
-                                {{result.index}}
-                                {{result.average}}
-                                {{result.years}}
+                            <div class="col">
+                                <!-- Title -->
+                                <div class="row">
+                                    <h3>{{result.city}}, {{result.state}}</h3>
+                                </div>
+                                <!-- Success -->
+                                <div class="row" id="displayResult">
+                                    <div class="col col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <img src="http://vignette3.wikia.nocookie.net/ben-and-toads-contest/images/e/e3/Map_of_United_States.jpg"
+                                             alt="United States"
+                                             class="img-fluid rounded state-img" />
+                                    </div>
+                                    <div class="col col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <dl class="dl-horizontal">
+                                            <dt>
+                                            <span>
+                                                Safety Index:
+                                            </span>
+                                            </dt>
+                                            <dd>
+                                            <span>
+                                                {{result.index}}
+                                            </span>
+                                            </dd>
+                                            <dt>
+                                            <span>
+                                                State Average:
+                                            </span>
+                                            </dt>
+                                            <dd>
+                                            <span>
+                                                {{result.average}}
+                                            </span>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </div>
+                                <!-- Failure -->
+                                <div class="row" id="noResultError">
+                                    <p>We are <em>unable to find</em> the results for {{result.city}}, {{result.state}} in our database.</p>
+                                    <p>We <strong>apologize</strong> for the <em>inconvenience</em>.</p>
+                                    <p>Please report this issue to us by contacting us if you have time.</p>
+                                    <p>Thank you.</p>
+                                </div>
                             </div>
-                            <div class="col" id="noResultError">
-                                <p>We are <em>unable to find</em> the results for {{result.city}}, {{result.state}} in our database.</p>
-                                <p>We <strong>apologize</strong> for the <em>inconvenience</em>.</p>
-                                <p>Please report this issue to us by contacting us if you have time.</p>
-                                <p>Thank you.</p>
-                            </div>
-                        </div>
-                        <div class="row" id="noGpsError">
-                            <p>
-                                Unable to access your current locaitons.
-                                <br/>
-                                Please use the search box.
-                            </p>
-                        </div>
 
+                        </div>
+                        <!-- No GPS Error -->
+                        <div class="row" id="noGpsError">
+                            <div class="col">
+                                <p>
+                                    Unable to access your current locaitons.
+                                    <br/>
+                                    Please use the search box.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Server Error -->
                         <div class="row" id="serverError">
-                            <p>
-                                Error connecting to server.
-                                <br />
-                                Please try again later.
-                            </p>
+                            <div class="col">
+                                <p>
+                                    Error connecting to server.
+                                    <br />
+                                    Please try again later.
+                                </p>
+                            </div>
+
                         </div>
 
                     </div>
