add star system for crime.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -155,8 +155,18 @@
                                             </span>
                                                 </dt>
                                                 <dd>
-                                            <span>
-                                                {{result.index}}
+                                            <span id="ResultRating">
+                                                <div>
+                                                    <span id="resultStars">
+
+                                                    </span>
+                                                </div>
+                                                <div>
+                                                    <span>WORST</span>
+                                                    <span>...........</span>
+                                                    <span>BEST</span>
+                                                </div>
+
                                             </span>
                                                 </dd>
                                                 <dt>
@@ -299,9 +309,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
 
     <!-- Footer -->
     <footer>
