Minor adjustments to index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -102,7 +102,7 @@
                         <div class="row">
                             <div class="col col-lg-10 col-md-10 col-sm-10 col-xs-10">
                                 <input id="citySearch" type="text" class="form-control" autocomplete="off"
-                                       placeholder="Find my City" aria-describedby="basic-addon1"
+                                       placeholder="Find My City" aria-describedby="basic-addon1"
                                        ng-model="cityAddressToSearch">
                             </div>
                             <div class="col col-lg-2 col-md-2 col-sm-2 col-xs-2">
@@ -278,10 +278,10 @@
         <div class="download-section">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Download Source Code</h2>
-                <p>You can download our source code for free on the github.</p>
-                <a href="https://github.com/SoundsNeat/demo-web-project"
+                <p>You can download our source code for free on github.</p>
+                <a href="https://github.com/SoundsNeat/AmISafeHere"
                    class="btn btn-default btn-lg">
-                    Visit Github Page [TODO: update the sourcecode page]
+                    Visit Our Github Page
                 </a>
             </div>
         </div>
@@ -292,7 +292,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
-                <p>Feel free to email us to provide feedback on our project, give us suggestions for new ideas, or to just say hello!</p>
+                <p>Feel free to email us to provide feedback on our project, give suggestions for new ideas, or just say hello!</p>
                 <p><a href="mailto:soundsneat480@gmail.com">soundsneat480@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
