Minor changes to error texts.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -235,7 +235,7 @@
                         <div class="row" id="noGpsError">
                             <div class="col">
                                 <p>
-                                    Unable to access your current locaitons.
+                                    Unable to access your current location.
                                     <br/>
                                     Please use the search box.
                                 </p>
