Added map to the result page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -143,9 +143,7 @@
                                 <div class="" id="displayResult">
                                     <div class="row">
                                         <div class="col col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                            <img src="http://vignette3.wikia.nocookie.net/ben-and-toads-contest/images/e/e3/Map_of_United_States.jpg"
-                                                 alt="United States"
-                                                 class="img-fluid rounded state-img" />
+                                            <div id="googleMapMedium"></div>
                                         </div>
                                         <div class="col col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                             <dl class="dl-horizontal">
