--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -167,16 +167,6 @@
 
                                             </span>
                                                 </dd>
-                                                <dt>
-                                            <span>
-                                                State Average:
-                                            </span>
-                                                </dt>
-                                                <dd>
-                                            <span>
-                                                {{result.average}}
-                                            </span>
-                                                </dd>
                                             </dl>
                                         </div>
                                     </div>
@@ -190,7 +180,7 @@
                                                 </dt>
                                                 <dd>
                                                     <span>
-                                                        {{result.years}}
+                                                        {{result.crimeDataYears}}
                                                     </span>
                                                 </dd>
                                                 <dt>
@@ -200,7 +190,7 @@
                                                 </dt>
                                                 <dd>
                                                     <span>
-                                                        {{result.years}}
+                                                        {{result.crimeDataYears}}
                                                     </span>
                                                 </dd>
                                                 <dt>
@@ -210,7 +200,7 @@
                                                 </dt>
                                                 <dd>
                                                     <span>
-                                                        {{result.years}}
+                                                        {{result.crimeDataYears}}
                                                     </span>
                                                 </dd>
                                             </dl>
