adding padding on result title

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -137,7 +137,7 @@
                             <div class="col">
                                 <!-- Title -->
                                 <div class="row" id="titleCityState">
-                                    <h3>{{result.city}}, {{result.state}}</h3>
+                                    <h3 id="resultTitle">{{result.city}}, {{result.state}}</h3>
                                 </div>
                                 <!-- Success -->
                                 <div class="" id="displayResult">
