--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -252,11 +252,54 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col">
                 <h2>About Sounds Neat</h2>
-                <p>
-                    We'll write some info about our team soon. :)
-                </p>
+                <div class="row">
+                    <div class="col col-lg-3 col-3 col-sm-6 col-xs-6">
+                        <div class="team-member">
+                            <img src="https://avatars0.githubusercontent.com/u/11383259?v=3&s=460" class="img-responsive img-circle" alt="">
+                            <h4>Wai Phyo</h4>
+                            <p class="text-muted">Developer</p>
+                            <ul class="list-inline social-buttons">
+                                <li><a href="https://github.com/wlinnp" target="_blank"><i class="fa fa-github fa-3"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col col-lg-3 col-3 col-sm-6 col-xs-6">
+                        <div class="team-member">
+                            <img src="https://avatars2.githubusercontent.com/u/5397399?v=3&s=460" class="img-responsive img-circle" alt="">
+                            <h4>Connor Haskins</h4>
+                            <p class="text-muted">Developer</p>
+                            <ul class="list-inline social-buttons">
+                                <li><a href="http://www.github.com//Lucodivo" target="_blank"><i class="fa fa-github fa-3"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col col-lg-3 col-3 col-sm-6 col-xs-6">
+                        <div class="team-member">
+                            <img src="https://avatars0.githubusercontent.com/u/16805130?v=3&s=460" class="img-responsive img-circle" alt="">
+                            <h4>Ben Chin</h4>
+                            <p class="text-muted">Developer</p>
+                            <ul class="list-inline social-buttons">
+                                <li><a href="http://www.github.com/bechin" target="_blank"><i class="fa fa-github fa-3"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col col-lg-3 col-3 col-sm-6 col-xs-6">
+                        <div class="team-member">
+                            <img src="https://avatars1.githubusercontent.com/u/16514037?v=3&s=460" class="img-responsive img-circle" alt="">
+                            <h4>Jonathan Fetzer</h4>
+                            <p class="text-muted">Developer</p>
+                            <ul class="list-inline social-buttons">
+                                <li><a href="https://github.com/jtfetzer" target="_blank"><i class="fa fa-github fa-3"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
