Fixed the crime algorithm logic.

--- a/graphs.html
+++ b/graphs.html
@@ -23,7 +23,7 @@
 			console.log( Plotly.BUILD );
 			
 			var data = [{
-				x: ['Murders', 'Rapes', 'Roberies', 'Assaults', 'Thefts', 'Auto Thefts', 'Arsons'],
+				x: ['Murders', 'Rapes', 'Robberies', 'Assaults', 'Thefts', 'Auto Thefts', 'Arsons'],
 				y: [151.0,149.0,857.0,131.0,233.0],
 				name: 'Adelanto',
 				type: 'bar'
