fixed map and graph loading problem for auto-detect

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -88,8 +88,8 @@
                 <div class="row">
                     <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2">
                         <h4 class="brand-heading">Let's find out! </h4>
-                        <button class="btn-success btn-lg btn-block"
-
+                        <button type="submit" class="btn-success btn-lg btn-block"
+                                data-toggle="modal" data-target="#resultModal"
                                 ng-click="SearchCityWithCoordinates()">
                             <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
                             Get My Location
