add spacing between auto and manual

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -94,13 +94,13 @@
                             <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
                             Get My Location
                         </button>
-
+                        <div id="separatorAutoManual" ></div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2">
                         <div class="row">
-                            <div class="col col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                            <div class="col col-lg-10 col-md-10 col-sm-10 col-xs-10 citySearchText">
                                 <input id="citySearch" type="text" class="form-control" autocomplete="off"
                                        placeholder="Find My City" aria-describedby="basic-addon1"
                                        ng-model="cityAddressToSearch">
