--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -315,7 +315,7 @@
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="./js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD90S0xFhWOVrI1BsM72yAognJ7tQy-_xM"></script>
@@ -333,8 +333,8 @@
     <script type="text/javascript"  src="./js/CrimeLogic.js"></script>
 
     <!-- Angular JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <script src="/js/AmISafeHere-ajs.js"></script>
+    <script src="./js/angular.min.js"></script>
+    <script src="./js/AmISafeHere-ajs.js"></script>
 </body>
 
 </html>
