--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,8 +30,8 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <script src="./js/html5shiv.js"></script>
+        <script src="./js/respond.min.js"></script>
     <![endif]-->
 
 
@@ -137,15 +137,16 @@
                             <div class="col">
                                 <!-- Title -->
                                 <div class="row" id="titleCityState">
-                                    <h3 id="resultTitle">{{result.city}}, {{result.state}}</h3>
+                                    <div class="col col-centered">
+                                        <h3 id="resultTitle">
+                                            {{result.city}}, {{result.state}}
+                                        </h3>
+                                    </div>
                                 </div>
                                 <!-- Success -->
                                 <div class="" id="displayResult">
                                     <div class="row">
-                                        <div class="col col-lg-6 col-md-6 col-sm-12 col-xs-12 col-centered">
-                                            <div id="googleMapMedium"></div>
-                                        </div>
-                                        <div class="col col-lg-6 col-md-6 col-sm-12 col-xs-12 col-centered">
+                                        <div class="col col-centered">
                                             <div class="safetyRating text-center">
                                                 <strong>
                                                     Danger Index
@@ -153,17 +154,22 @@
                                                 <br />
                                                 <br />
                                                 <span id="ResultRating">
-                                                <div>
-                                                    <span id="resultStars">
-                                                    </span>
-                                                </div>
-                                            </span>
+                                                    <div>
+                                                        <span id="resultStars">
+                                                        </span>
+                                                    </div>
+                                                </span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col col-centered">
                                             <div id="detailGraph"></div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col col-centered">
+                                            <div id="googleMapMedium"></div>
                                         </div>
                                     </div>
                                 </div>
