Add 'loading...' on result

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -133,6 +133,13 @@
                 </div>
                 <div class="modal-body" id="resultModalBody">
                     <div class="container-fluid">
+                        <div class="row" id="pre-load">
+                            <div class="col">
+                                <strong>
+                                    LOADING...
+                                </strong>
+                            </div>
+                        </div>
                         <div class="row" id="cityStateTitle" ng-model="result">
                             <div class="col">
                                 <!-- Title -->
