--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -129,7 +129,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title" id="myModalLabel">Search Results</h4>
+                    <h4 class="modal-title" id="myModalLabel">Search Result</h4>
                 </div>
                 <div class="modal-body" id="resultModalBody">
                     <div class="container-fluid">
