2 graphs with tabs

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -170,7 +170,26 @@
                                         </div>
                                     </div>
                                     <div class="row">
+                                        <div class="col">
+                                            <nav aria-label="Page navigation">
+                                                <ul class="pagination">
+                                                    <li>
+                                                        <a id="buttonGraphOneHundredThousandView" href="#">
+                                                            <span class="btn-lg glyphicon glyphicon-stats"></span>
+                                                            Per 100,000 Graph
+                                                        </a>
+                                                        <a id="buttonGraphDetailView" href="#">
+                                                            <span class="btn-lg glyphicon glyphicon-stats"></span>
+                                                            Detailed Graph
+                                                        </a>
+                                                    </li>
+                                                </ul>
+                                            </nav>
+                                        </div>
+                                    </div>
+                                    <div class="row">
                                         <div class="col col-centered">
+                                            <div id="oneHundredThousandGraph"></div>
                                             <div id="detailGraph"></div>
                                         </div>
                                     </div>
