Minor aesthetic changes to graphs and graph tabs

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -175,22 +175,23 @@
                                                 <ul class="pagination">
                                                     <li>
                                                         <a id="buttonGraphOneHundredThousandView" href="#">
-                                                            <span class="btn-lg glyphicon glyphicon-stats"></span>
-                                                            Per 100,000 Graph
+                                                            <span class="btn-tab glyphicon glyphicon-stats"></span>
+                                                            Incidents Per 100,000
                                                         </a>
                                                         <a id="buttonGraphDetailView" href="#">
-                                                            <span class="btn-lg glyphicon glyphicon-stats"></span>
-                                                            Detailed Graph
+                                                            <span class="btn-tab glyphicon glyphicon-stats"></span>
+                                                            Total Incidents
                                                         </a>
                                                     </li>
+                                                    <hr>
                                                 </ul>
                                             </nav>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col col-centered">
-                                            <div id="oneHundredThousandGraph"></div>
-                                            <div id="detailGraph"></div>
+                                            <div id="oneHundredThousandGraph" class="crimeGraph"></div>
+                                            <div id="detailGraph" class="crimeGraph"></div>
                                         </div>
                                     </div>
                                     <div class="row">
